@@ -7,23 +7,20 @@ package edu.tigers.sumatra.ai.metis.targetrater;
 import edu.tigers.sumatra.math.circle.Circle;
 import edu.tigers.sumatra.math.line.Lines;
 import edu.tigers.sumatra.math.vector.Vector2;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 
-@RunWith(MockitoJUnitRunner.class)
-public class AngleRangeGeneratorTest
+class AngleRangeGeneratorTest
 {
 	private AngleRangeGenerator processor;
 
 
-	@Before
+	@BeforeEach
 	public void before()
 	{
 		processor = AngleRangeGenerator.forLineSegment(Lines.segmentFromPoints(
@@ -34,7 +31,7 @@ public class AngleRangeGeneratorTest
 
 
 	@Test
-	public void processOneBotInside()
+	void processOneBotInside()
 	{
 		var obstacles = List.of(
 				Circle.createCircle(Vector2.fromXY(1000, 0), 150)
@@ -43,13 +40,13 @@ public class AngleRangeGeneratorTest
 
 		List<AngleRange> coveredAngles = processor.findCoveredAngleRanges(start, obstacles);
 		assertThat(coveredAngles).hasSize(1);
-		assertThat(coveredAngles.get(0).getLeft()).isBetween(0.0, 0.2);
-		assertThat(coveredAngles.get(0).getRight()).isBetween(-0.2, 0.0);
+		assertThat(coveredAngles.getFirst().getLeft()).isBetween(0.0, 0.2);
+		assertThat(coveredAngles.getFirst().getRight()).isBetween(-0.2, 0.0);
 	}
 
 
 	@Test
-	public void processTwoBotsInside()
+	void processTwoBotsInside()
 	{
 		var obstacles = List.of(
 				Circle.createCircle(Vector2.fromXY(1000, 0), 150),
@@ -67,7 +64,7 @@ public class AngleRangeGeneratorTest
 
 
 	@Test
-	public void processOneBotCoveringAll()
+	void processOneBotCoveringAll()
 	{
 		var obstacles = List.of(
 				Circle.createCircle(Vector2.fromXY(1000, 0), 800)
