@@ -1,12 +1,11 @@
 /*
- * Copyright (c) 2009 - 2021, DHBW Mannheim - TIGERs Mannheim
+ * Copyright (c) 2009 - 2025, DHBW Mannheim - TIGERs Mannheim
  */
 
 package edu.tigers.sumatra.vision;
 
 import com.github.g3force.configurable.ConfigRegistration;
 import com.github.g3force.configurable.Configurable;
-import edu.tigers.moduli.exceptions.StartModuleException;
 import edu.tigers.sumatra.cam.ACam;
 import edu.tigers.sumatra.cam.data.CamCalibration;
 import edu.tigers.sumatra.cam.data.CamDetectionFrame;
@@ -32,6 +31,7 @@ import edu.tigers.sumatra.vision.data.FilteredVisionBall;
 import edu.tigers.sumatra.vision.data.FilteredVisionBot;
 import edu.tigers.sumatra.vision.data.FilteredVisionFrame;
 import edu.tigers.sumatra.vision.data.IBallModelIdentificationObserver;
+import edu.tigers.sumatra.vision.data.Viewport;
 import edu.tigers.sumatra.vision.kick.estimators.IBallModelIdentResult;
 import edu.tigers.sumatra.vision.tracker.BallTracker;
 import edu.tigers.sumatra.vision.tracker.RobotTracker;
@@ -116,7 +116,7 @@ public class VisionFilterImpl extends AVisionFilter
 
 		List<FilteredVisionBot> extrapolatedBots = frame.getBots().stream()
 				.map(b -> b.extrapolate(timestampNow, timestampFuture))
-				.collect(Collectors.toList());
+				.toList();
 
 		// construct extrapolated vision frame
 		return FilteredVisionFrame.builder()
@@ -133,7 +133,7 @@ public class VisionFilterImpl extends AVisionFilter
 	@Override
 	protected void updateCamDetectionFrame(final CamDetectionFrame camDetectionFrame)
 	{
-		if (camDetectionFrame.gettCapture() <= 0)
+		if (camDetectionFrame.getTimestamp() <= 0)
 		{
 			// skip negative timestamps. They can produce unexpected behavior
 			return;
@@ -167,7 +167,7 @@ public class VisionFilterImpl extends AVisionFilter
 			} catch (InterruptedException e)
 			{
 				Thread.currentThread().interrupt();
-			} catch(Throwable e)
+			} catch (Throwable e)
 			{
 				log.error("Uncaught exception while processing cam frame", e);
 			}
@@ -224,7 +224,7 @@ public class VisionFilterImpl extends AVisionFilter
 		// filter merged robots by quality
 		List<FilteredVisionBot> filteredRobots = mergedRobots.stream()
 				.filter(b -> robotQualityInspector.passesQualityInspection(b.getBotID()))
-				.collect(Collectors.toList());
+				.toList();
 
 		// check robot quality
 		qualityInspector.inspectRobots(cams.values(), timestamp);
@@ -244,6 +244,9 @@ public class VisionFilterImpl extends AVisionFilter
 
 		// forward frame for inspection
 		qualityInspector.inspectFilteredVisionFrame(frame);
+
+		// Inspect the current state of the cameras
+		qualityInspector.inspectCameras(cams.values());
 
 		// Update active cameras in viewport architect
 		viewportArchitect.updateCameras(cams.keySet());
@@ -290,14 +293,17 @@ public class VisionFilterImpl extends AVisionFilter
 			Collection<CamFilter> camFilters,
 			long timestamp,
 			List<FilteredVisionBot> mergedRobots,
-			FilteredVisionBall lastBall)
+			FilteredVisionBall lastBall
+	)
 	{
 		List<BallTracker> allTrackers = camFilters.stream()
 				.flatMap(f -> f.getBalls().stream())
-				.collect(Collectors.toList());
+				.toList();
 
-		BallFilterPreprocessorOutput preOutput = ballFilterPreprocessor.update(lastBall, allTrackers,
-				mergedRobots, getRobotInfoMap(), timestamp);
+		BallFilterPreprocessorOutput preOutput = ballFilterPreprocessor.update(
+				lastBall, allTrackers,
+				mergedRobots, getRobotInfoMap(), timestamp
+		);
 
 		lastBallFilterOutput = ballFilter.update(preOutput, lastBall, timestamp);
 
@@ -338,7 +344,7 @@ public class VisionFilterImpl extends AVisionFilter
 
 
 	@Override
-	public void startModule() throws StartModuleException
+	public void startModule()
 	{
 		super.startModule();
 		SumatraModel.getInstance().getModule(ACam.class).addObserver(this);
@@ -355,7 +361,7 @@ public class VisionFilterImpl extends AVisionFilter
 			new Thread(this::processCamFrameQueue, "VisionFilter Processor").start();
 			scheduledExecutorService
 					.scheduleAtFixedRate(() -> Safe.run(this::publish), 0, (long) (publishDt * 1e9), TimeUnit.NANOSECONDS);
-			log.info("Using threaded VisionFilter");
+			log.debug("Using threaded VisionFilter");
 		}
 	}
 
@@ -389,13 +395,6 @@ public class VisionFilterImpl extends AVisionFilter
 
 
 	@Override
-	public void setModelIdentification(final boolean enable)
-	{
-		ballFilterPreprocessor.setDoModelIdentification(enable);
-	}
-
-
-	@Override
 	public void onClearCamFrame()
 	{
 		super.onClearCamFrame();
@@ -409,7 +408,7 @@ public class VisionFilterImpl extends AVisionFilter
 	@Override
 	public void onViewportUpdated(final int cameraId, final IRectangle viewport)
 	{
-		publishUpdatedViewport(cameraId, viewport);
+		publishUpdatedViewport(new Viewport(cameraId, viewport));
 	}
 
 
@@ -424,7 +423,7 @@ public class VisionFilterImpl extends AVisionFilter
 	{
 		return cams.values().stream()
 				.flatMap(c -> c.getInfoShapes().stream())
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 
@@ -432,7 +431,7 @@ public class VisionFilterImpl extends AVisionFilter
 	{
 		return cams.values().stream()
 				.flatMap(c -> c.getRobotTrackerShapes(timestamp).stream())
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 
@@ -454,16 +453,24 @@ public class VisionFilterImpl extends AVisionFilter
 				camId.setColor(Color.WHITE);
 				shapes.add(camId);
 
-				DrawableAnnotation unc = new DrawableAnnotation(pos,
-						String.format("%.2f",
-								tracker.getFilter().getPositionUncertainty().getLength() * tracker.getUncertainty()));
+				DrawableAnnotation unc = new DrawableAnnotation(
+						pos,
+						String.format(
+								"%.2f",
+								tracker.getFilter().getPositionUncertainty().getLength() * tracker.getUncertainty()
+						)
+				);
 				unc.withOffset(Vector2.fromX(-80));
 				unc.setColor(Color.WHITE);
 				shapes.add(unc);
 
-				DrawableAnnotation age = new DrawableAnnotation(pos,
-						String.format("%d: %.3fs", camFilter.getCamId(),
-								(timestamp - tracker.getLastUpdateTimestamp()) * 1e-9));
+				DrawableAnnotation age = new DrawableAnnotation(
+						pos,
+						String.format(
+								"%d: %.3fs", camFilter.getCamId(),
+								(timestamp - tracker.getLastUpdateTimestamp()) * 1e-9
+						)
+				);
 				age.withOffset(Vector2.fromXY(120, (camFilter.getCamId() * 45.0) - 100.0));
 				age.setColor(Color.GREEN);
 				shapes.add(age);
@@ -477,14 +484,16 @@ public class VisionFilterImpl extends AVisionFilter
 		return shapes;
 	}
 
+
 	private List<IDrawableShape> getVirtualBallShapes()
 	{
 		List<IDrawableShape> shapes = new ArrayList<>();
 
 		boolean virtualBallUsed = !virtualBallProducer.getVirtualBalls().isEmpty();
-		if(virtualBallUsed)
+		if (virtualBallUsed)
 		{
-			DrawableAnnotation virtHint = new DrawableAnnotation(lastBallFilterOutput.getFilteredBall().getPos().getXYVector(), "VIRTUAL", true);
+			DrawableAnnotation virtHint = new DrawableAnnotation(
+					lastBallFilterOutput.getFilteredBall().getPos().getXYVector(), "VIRTUAL", true);
 			virtHint.setColor(Color.ORANGE);
 			virtHint.withOffset(Vector2.fromY(40));
 			virtHint.withFontHeight(30);
