@@ -81,6 +81,7 @@ public class StraightKickEstimator implements IKickEstimator
 	 *
 	 * @param event Initial kick event from detector.
 	 */
+	@SuppressWarnings("squid:S6204") // Usage of Collectors.toList() to get modifiable list
 	public StraightKickEstimator(final KickEvent event, List<FilteredVisionBall> filteredBalls)
 	{
 		List<CamBall> camBalls = event.getRecordsSinceKick().stream()
@@ -93,7 +94,7 @@ public class StraightKickEstimator implements IKickEstimator
 		{
 			// remove first sample, as it is much older than the next one
 			// This can happen, if the ball is not visible for some time before it is kicked
-			camBalls.remove(0);
+			camBalls.removeFirst();
 		}
 
 		var ballStateAtKick = getBallStateAtKick(event, filteredBalls);
@@ -141,7 +142,7 @@ public class StraightKickEstimator implements IKickEstimator
 
 		for (int i = 0; i < numPoints; i++)
 		{
-			double time = (balls.get(i).gettCapture() - balls.get(0).gettCapture()) * 1e-9;
+			double time = (balls.get(i).getTimestamp() - balls.getFirst().getTimestamp()) * 1e-9;
 			matA.setEntry(i, 0, time);
 			matA.setEntry(i, 1, 1.0);
 
@@ -266,7 +267,7 @@ public class StraightKickEstimator implements IKickEstimator
 		double error = 0;
 		for (CamBall ball : records)
 		{
-			IVector2 modelPos = traj.getMilliStateAtTime((ball.gettCapture() - tZero) * 1e-9).getPos().getXYVector();
+			IVector2 modelPos = traj.getMilliStateAtTime((ball.getTimestamp() - tZero) * 1e-9).getPos().getXYVector();
 			ground.add(modelPos);
 
 			error += modelPos.distanceTo(ball.getFlatPos());
@@ -288,7 +289,7 @@ public class StraightKickEstimator implements IKickEstimator
 	@Override
 	public boolean isDone(final List<FilteredVisionBot> mergedRobots, final long timestamp)
 	{
-		if (((allRecords.get(allRecords.size() - 1).gettCapture() - allRecords.get(0).gettCapture()) * 1e-9) < 0.1)
+		if (((allRecords.getLast().getTimestamp() - allRecords.getFirst().getTimestamp()) * 1e-9) < 0.1)
 		{
 			// keep this estimator for at least 0.1s
 			return false;
@@ -296,6 +297,7 @@ public class StraightKickEstimator implements IKickEstimator
 
 		if ((allRecords.size() > 20) && isMaxDirectionErrorExceeded(allRecords))
 		{
+			log.debug("Estimator done, because max direction error exceeded");
 			return true;
 		}
 
@@ -306,6 +308,7 @@ public class StraightKickEstimator implements IKickEstimator
 
 		if (fitResult.getAvgDistance() > maxFittingError)
 		{
+			log.debug("Estimator done, because average distance exceeded: {}", fitResult.getAvgDistance());
 			return true;
 		}
 
@@ -316,10 +319,17 @@ public class StraightKickEstimator implements IKickEstimator
 
 		if (minDistToRobot < Geometry.getBotRadius())
 		{
+			log.debug("Estimator done, because ball is close to robot: {}", minDistToRobot);
 			return true;
 		}
 
-		return !Geometry.getField().withMargin(100).isPointInShape(posNow);
+		boolean outOfField = !Geometry.getField().withMargin(100).isPointInShape(posNow);
+		if (outOfField)
+		{
+			log.debug("Estimator done, because ball is out of field");
+			return true;
+		}
+		return false;
 	}
 
 
@@ -330,14 +340,15 @@ public class StraightKickEstimator implements IKickEstimator
 
 		if (allRecords.size() < 20)
 		{
+			log.debug("Not enough records for model identification: {}", allRecords.size());
 			return result;
 		}
 
-		long timeAfterKick = allRecords.get(0).gettCapture() + 500_000_000;
+		long timeAfterKick = allRecords.getFirst().getTimestamp() + 500_000_000;
 
 		// keep all records directly after the kick and within the field (-10cm)
 		List<CamBall> usedRecords = allRecords.stream()
-				.filter(r -> (r.gettCapture() < timeAfterKick)
+				.filter(r -> (r.getTimestamp() < timeAfterKick)
 						|| Geometry.getField().withMargin(-100).isPointInShape(r.getFlatPos()))
 				.toList();
 
@@ -350,10 +361,10 @@ public class StraightKickEstimator implements IKickEstimator
 			result.add(straightResult.get());
 
 			final String lineSeparator = System.lineSeparator();
-			log.info("Straight Model:{}{}", lineSeparator, straightResult.get());
+			log.debug("Straight Model:{}{}", lineSeparator, straightResult.get());
 		} else
 		{
-			log.info("Straight model identification failed.");
+			log.debug("Straight model identification failed.");
 		}
 
 		// check redirect identification
@@ -364,7 +375,7 @@ public class StraightKickEstimator implements IKickEstimator
 			result.add(redirectResult.get());
 
 			final String lineSeparator = System.lineSeparator();
-			log.info("Redirect Model:{}{}", lineSeparator, redirectResult.get());
+			log.debug("Redirect Model:{}{}", lineSeparator, redirectResult.get());
 		}
 
 		return result;
